# shoorty

./: .gitignore  Cargo.toml
src/: auth.rs  main.rs
src/handlers/: mod.rs  url.rs  user.rs
src/middlewares/: auth.rs
src/models/: mod.rs  statistic.rs  url.rs  user.rs
src/parsers/: http.rs
