[package]
name = "shoorty"
version = "0.1.0"
edition = "2021"

[dependencies]
nopnv = { git = "https://github.com/NopFault/nopnv", branch = "master" }
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
chrono = {version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "chrono"] }
actix-web-lab = "0.20.2"

